force-app/main/default/objects/Temporal_Tripulacion_Regatas__c/Temporal_Tripulacion_Regatas__c.object-meta.xml
<CustomObject>
    <label>Temporal Tripulacion Regata</label>
    <nameField>
        <label>Temporal Tripulacion Regata</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Tripulacion Regatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>