force-app/main/default/objects/Temporal_Tripulacion_Regatas__c/fields/Benefit_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Assignment</label>
    <referenceTo>BenefitAssignment</referenceTo>
    <relationshipLabel>Temporal Tripulacion Regatas</relationshipLabel>
    <relationshipName>Temporal_Tripulacion_Regatas</relationshipName>
    <type>Lookup</type>
</CustomField>