force-app/main/default/objects/Temporal_Tripulacion_Regatas__c/fields/CN_EXISTE_CURSO__c.field-meta.xml
<CustomField>
    <fullName>CN_EXISTE_CURSO__c</fullName>
    <label>CN_EXISTE_CURSO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>