force-app/main/default/objects/Temporal_Tripulacion_Regatas__c/fields/PRECIO__c.field-meta.xml
<CustomField>
    <fullName>PRECIO__c</fullName>
    <label>PRECIO</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>