force-app/main/default/objects/Temporal_Tripulacion_Regatas__c/fields/TP_ALUMNO__c.field-meta.xml
<CustomField>
    <fullName>TP_ALUMNO__c</fullName>
    <label>TP_ALUMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>