force-app/main/default/objects/Temporal_Tripulacion_Regatas__c/fields/TP_BONOS__c.field-meta.xml
<CustomField>
    <fullName>TP_BONOS__c</fullName>
    <label>TP_BONOS</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>