force-app/main/default/objects/Temporal_Tripulacion_Regatas__c/fields/TP_EQUIPO__c.field-meta.xml
<CustomField>
    <fullName>TP_EQUIPO__c</fullName>
    <label>TP_EQUIPO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>