force-app/main/default/objects/Temporal_Tripulacion_Regatas__c/fields/TP_FECMAT__c.field-meta.xml
<CustomField>
    <fullName>TP_FECMAT__c</fullName>
    <label>TP_FECMAT</label>
    <type>Date</type>
</CustomField>