force-app/main/default/objects/Temporal_Tripulacion_Regatas__c/fields/TP_NUMORI__c.field-meta.xml
<CustomField>
    <fullName>TP_NUMORI__c</fullName>
    <label>TP_NUMORI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>