force-app/main/default/objects/Temporal_Tripulacion_Regatas__c/fields/TP_ORIGEN__c.field-meta.xml
<CustomField>
    <fullName>TP_ORIGEN__c</fullName>
    <label>TP_ORIGEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>