force-app/main/default/objects/Temporal_Tripulacion_Regatas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>TP_NUMTRP__c</columns>
    <columns>TP_TIPALU__c</columns>
    <columns>TP_ALUMNO__c</columns>
    <columns>P_DDDKEY__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <columns>FechaCarga__c</columns>
    <columns>Benefit_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>